--- a/templates/alias/delete.alias.html
+++ b/templates/alias/delete.alias.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-  <h2 class="modal-title col-xs-12">
-    <span class="glyphicon glyphicon-trash"></span> 
-    Delete {{aliasToDelete.type}} 
-  </h2>
-  <p class="modal-title-caption col-xs-12">
-    {{aliasToDelete.name_EN}} / {{aliasToDelete.name_FR}}
-  </p>
+  <div class="col-xs-12">
+    <h2 class="modal-title">
+      <span class="glyphicon glyphicon-trash"></span> 
+      Delete {{aliasToDelete.type}} 
+    </h2>
+    <p class="modal-title-caption">
+      {{aliasToDelete.name_EN}} / {{aliasToDelete.name_FR}}
+    </p>
+  </div>
 </div>
 <div class="modal-body">
   <div class="alert alert-danger" role="alert">
