--- a/templates/educational-material/delete.educational-material.html
+++ b/templates/educational-material/delete.educational-material.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-  <h2 class="modal-title col-xs-12">
-    <span class="glyphicon glyphicon-trash"></span> 
-      Delete Educational Material 
-  </h2>
-  <p class="modal-title-caption col-xs-12">
-    {{eduMatToDelete.name_EN}} / {{eduMatToDelete.name_FR}}
-  </p>
+  <div class="col-xs-12">
+    <h2 class="modal-title ">
+      <span class="glyphicon glyphicon-trash"></span> 
+        Delete Educational Material 
+    </h2>
+    <p class="modal-title-caption ">
+      {{eduMatToDelete.name_EN}} / {{eduMatToDelete.name_FR}}
+    </p>
+  </div>
 </div>
 <div class="modal-body">
    <div class="alert alert-danger" role="alert">
