--- a/templates/educational-material/log.educational-material.html
+++ b/templates/educational-material/log.educational-material.html
@@ -1,15 +1,15 @@
 <!-- Modal title -->
 <div class="modal-header">
-  <div class="col-xs-6">
-    <h2 class="modal-title col-xs-12">
+  <div class="col-xs-12 col-md-6">
+    <h2 class="modal-title">
       <span class="fa fa-area-chart"></span> 
       Educational Material Logs 
     </h2>
-    <p class="modal-title-caption col-xs-12">
+    <p class="modal-title-caption">
       {{currentEduMat.name_EN}} / {{currentEduMat.name_FR}}
     </p>
   </div>
-  <div class="modal-buttons col-xs-6">
+  <div class="modal-buttons col-xs-12 col-md-6">
     <span> 
       <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Close">
     </span>
