--- a/templates/email/delete.email.html
+++ b/templates/email/delete.email.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-  <h2 class="modal-title col-xs-12">
-    <span class="glyphicon glyphicon-trash"></span> 
-    Delete Email 
-  </h2>
-  <p class="modal-title-caption col-xs-12">
-    {{emailToDelete.subject_EN}} / {{emailToDelete.subject_FR}}
-  </p>
+  <div class="col-xs-12">
+    <h2 class="modal-title">
+      <span class="glyphicon glyphicon-trash"></span> 
+      Delete Email 
+    </h2>
+    <p class="modal-title-caption">
+      {{emailToDelete.subject_EN}} / {{emailToDelete.subject_FR}}
+    </p>
+  </div>
 </div>
 <div class="modal-body">
   <div class="alert alert-danger" role="alert">
