--- a/templates/email/log.email.html
+++ b/templates/email/log.email.html
@@ -1,15 +1,15 @@
 <!-- Modal title -->
 <div class="modal-header">
-  <div class="col-xs-6">
-    <h2 class="modal-title col-xs-12">
+  <div class="col-xs-12 col-md-6">
+    <h2 class="modal-title">
       <span class="fa fa-area-chart"></span> 
       Email Logs 
     </h2>
-    <p class="modal-title-caption col-xs-12">
-      {{currentEmail.name_EN}} / {{currentEmail.name_FR}}
+    <p class="modal-title-caption">
+      {{currentEmail.subject_EN}} / {{currentEmail.subject_FR}}
     </p>
   </div>
-  <div class="modal-buttons col-xs-6">
+  <div class="modal-buttons col-xs-12 col-md-6">
     <span> 
       <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Close">
     </span>
