--- a/templates/hospital-map/delete.hospital-map.html
+++ b/templates/hospital-map/delete.hospital-map.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-  <h2 class="modal-title col-xs-12">
-    <span class="glyphicon glyphicon-trash"></span> 
-    Delete Hospital Map 
-  </h2>
-  <p class="modal-title-caption col-xs-12">
-    {{hosMapToDelete.name_EN}} / {{hosMapToDelete.name_FR}}
-  </p>
+  <div class="col-xs-12">
+    <h2 class="modal-title">
+      <span class="glyphicon glyphicon-trash"></span> 
+      Delete Hospital Map 
+    </h2>
+    <p class="modal-title-caption">
+      {{hosMapToDelete.name_EN}} / {{hosMapToDelete.name_FR}}
+    </p>
+  </div>
 </div>
 <div class="modal-body">
   <div class="alert alert-danger" role="alert">
