--- a/templates/legacy-questionnaire/delete.legacy-questionnaire.html
+++ b/templates/legacy-questionnaire/delete.legacy-questionnaire.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-	<h2 class="modal-title col-xs-12">
-		<span class="glyphicon glyphicon-trash"></span> 
-		Delete Legacy Questionnaire 
-	</h2>
-	<p class="modal-title-caption col-xs-12">
-		{{legacyQuestionnaireToDelete.name_EN}} / {{legacyQuestionnaireToDelete.name_FR}}
-	</p>
+  <div class="col-xs-12">
+  	<h2 class="modal-title">
+  		<span class="glyphicon glyphicon-trash"></span> 
+  		Delete Legacy Questionnaire 
+  	</h2>
+  	<p class="modal-title-caption">
+  		{{legacyQuestionnaireToDelete.name_EN}} / {{legacyQuestionnaireToDelete.name_FR}}
+  	</p>
+  </div>
 </div>
 <div class="modal-body">
 	<div class="alert alert-danger" role="alert">
