--- a/templates/notification/edit.notification.html
+++ b/templates/notification/edit.notification.html
@@ -1,15 +1,15 @@
 <!-- Modal title -->
 <div class="modal-header">
-  <div class="col-xs-6">
-    <h2 class="modal-title col-xs-12">
+  <div class="col-xs-12 col-md-6">
+    <h2 class="modal-title">
       <span class="glyphicon glyphicon-pencil"></span> 
       Edit Notification 
     </h2>
-    <p class="modal-title-caption col-xs-12">
+    <p class="modal-title-caption">
       {{notification.name_EN}} / {{notification.name_FR}}
     </p>
   </div>
-  <div class="modal-buttons col-xs-6">
+  <div class="modal-buttons col-xs-12 col-md-6">
     <span> 
       <form method="post" ng-submit="updateNotification()">
         <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
