--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -1,12 +1,14 @@
 <div class="modal-header">
-  <h2 class="modal-title col-xs-12">
-    <span class="glyphicon glyphicon-pencil"></span> 
-    Edit Post 
-  </h2>
-  <p class="modal-title-caption col-xs-12">
-    {{post.name_EN}} / {{post.name_FR}}
-  </p>
-  <div class="modal-buttons col-xs-12">
+  <div class="col-xs-12 col-md-6">
+    <h2 class="modal-title">
+      <span class="glyphicon glyphicon-pencil"></span> 
+      Edit Post 
+    </h2>
+    <p class="modal-title-caption">
+      {{post.name_EN}} / {{post.name_FR}}
+    </p>
+  </div>
+  <div class="modal-buttons col-xs-12 col-md-6">
     <span> 
       <form method="post" ng-submit="updatePost()">
         <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
