--- a/templates/alias/alias.html
+++ b/templates/alias/alias.html
@@ -40,7 +40,7 @@
 								</div>
 							</div>
             </div> 
-            <div class="row list-logs" style="margin-bottom: 10px;">
+            <div class="row list-logs">
               <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-4 col-lg-4">
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                   <div class="btn-group" role="group">
