--- Changed cron title in menus

--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -87,7 +87,7 @@
           <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="cron" ng-click="closeNav()">
           		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-          		Cron
+          		Cron Logs
           	</a>
           </li>
           <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
