--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -157,13 +157,13 @@
                   </div>
 								</div>
 								
-								<!-- SECTION: Cron -->
+								<!-- SECTION: Cron Logs -->
                 <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                   <div class="panel-container animated" ng-class="{pulse: hoverCronMenu, active: currentPage == 'cron'}" ng-mouseenter="hoverCronMenu=true" ng-mouseleave="hoverCronMenu=false" style="cursor:pointer;" ng-click="goToCron()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'cron'}">
                       <div class="panel-content">
                         <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                        <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Cron</strong></div>
+                        <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Cron Logs</strong></div>
                       </div>
                     </div>
                   </div>
