--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -244,10 +244,10 @@
 												<span  class="glyphicon glyphicon-time" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
-												<h1>Cron</h1>
+												<h1>Cron Logs</h1>
 											</div>  
 											<div class="panel-description">
-												<p>Control publishing event times and frequency.</p>
+												<p>Control publishing event times and frequency. View publishing logs.</p>
 											</div>
 										</div>
 									</div>
