Started modifying the questions listings and fixed filter bug

--- a/templates/questionnaire/question.html
+++ b/templates/questionnaire/question.html
@@ -12,7 +12,7 @@
             <!-- Page title -->
 						<div class="col-xs-12 col-md-9 title-content">
 							<span class="fa fa-search"></span>
-							<h1><strong>Manage Question Bank</strong></h1>
+							<h1><strong>Manage Questions</strong></h1>
 						</div>
             <!-- Breadcrumbs -->
 						<div class="col-md-3 title-breadcrumbs">
