--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -66,7 +66,7 @@
 											<span class="fa fa-search fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">  
-											<h1>Manage Question Bank</h1>
+											<h1>Manage Questions</h1>
 										</div>  
 										<div class="panel-description">
 											<p>View and edit all the questions stored in the question bank.</p>
