--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -253,13 +253,13 @@
                   </div>
                 </div>
 
-                <!-- SECTION: Answer Type -->
+                <!-- SECTION: Question Type -->
                 <div class="row animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show">
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Answer Type</h2>
+                        <h2>Response Type</h2>
                       </span>
                     </div>
                   </div>
@@ -268,19 +268,19 @@
                   <div class="col-xs-12 col-md-6">
                     <p style="margin-bottom: 10px;">
                       <span style="color:#d9534f"><strong>Required field:</strong></span>
-                      Please choose an answer type where to add this question.
+                      Please choose a response type where to add this question.
                     </p>
                     <div class="row animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show">
                       <div class="col-xs-12">
                         <div class="panel" ng-class="newQuestion.answertype_serNum ? 'panel-success': 'panel-danger'">
-                          <div class="panel-heading"><strong>Answer Type</strong>
+                          <div class="panel-heading"><strong>Response Type</strong>
                             <span ng-hide="newQuestion.answertype_serNum" style="float:right"><em>Incomplete</em></span>
                             <span ng-show="newQuestion.answertype_serNum" style="float:right"><em>Complete</em></span>
                           </div>
                           <div class="panel-body">
                             <div class="input-group">
                               <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                              <input class="form-control" type="text" ng-model="atEntered" ng-change="searchAt(atEntered)" placeholder="Search Answer Type"/>
+                              <input class="form-control" type="text" ng-model="atEntered" ng-change="searchAt(atEntered)" placeholder="Search Response Type"/>
                             </div> 
                             <ul class="list-items">
                               <li ng-repeat="at in atFilterList | filter: searchAtFilter">
@@ -296,7 +296,7 @@
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <p style="margin-bottom: 10px;">
-                      <span style="font-size: 20px;"><strong>Preview </strong></span><span style="font-size: 15px;">(available only when both title and answer type are filled)</span>
+                      <span style="font-size: 20px;"><strong>Preview </strong></span><span style="font-size: 15px;">(available only when both title and response type are filled)</span>
                     </p>
 
                     <!-- Preview -->
@@ -335,7 +335,7 @@
                   <div class="col-xs-12 col-md-8">
                     <p style="margin-bottom: 10px; margin-top: 10px;">
                       <span style="font-size: 20px;" class="fa fa-question-circle"></span>
-                      <span style="font-size: 15px;"> Can't find answer type? Create a new one here:</span>
+                      <span style="font-size: 15px;"> Can't find response type? Create a new one here:</span>
                     </p>
                   </div>
                   <div class="col-xs-12">
@@ -375,8 +375,8 @@
 
                         <div class="col-xs-12 col-md-8">
                           <div class="input-group" style="margin-top:10px; margin-bottom:10px;">
-                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Answer Type (EN)" ng-disabled="!atCategory" required/>
-                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_FR" placeholder="New Answer Type (FR)" ng-disabled="!atCategory" required/>
+                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Response Type (EN)" ng-disabled="!atCategory" required/>
+                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_FR" placeholder="New Response Type (FR)" ng-disabled="!atCategory" required/>
                             <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewAt(atCategory)" ng-disabled="newAtForm.$invalid">Add</button></span>
                           </div>
                         </div>
