--- a/templates/questionnaire/cannot.delete.question.html
+++ b/templates/questionnaire/cannot.delete.question.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h2 class="modal-title col-xs-12">
-        <span class="glyphicon glyphicon-trash"></span> Question locked
+        <span class="fa fa-lock"></span> Question locked
     </h2>
 </div>
 <div class="modal-body">
