--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -359,7 +359,7 @@
                   </div>
 
                   <!-- Add multiple choice options -->
-                  <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Multiple Choice'">
+                  <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Checkbox' || atCategory.category_EN === 'Radio Button'">
                     <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in newAnswerType.options">
                       <input class="form-control" style="width:20%" type="number" placeholder="Position" ng-model="option.position" required/>
                       <input class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.text_EN" required/>
@@ -370,7 +370,7 @@
                   </div>
 
                   <!-- Add Linear scale options -->
-                  <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Linear Scale'">
+                  <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Slider'">
                     <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in newAnswerType.options">
                       <input class="form-control" style="width:20%" type="number" min="1" placeholder="Position" ng-model="option.position" required/>
                       <input class="form-control" style="width:40%" type="text" placeholder="Scale (EN)" ng-model="option.text_EN" required/>
